# bug-free-octo-journey

./: .env.example  .gitignore  README.md  SECURITY.md  pyproject.toml  requirements.txt
examples/: commands.md
examples/plugin-template/: plugin.py
jarvis/: __init__.py  cli.py
jarvis/agent/: __init__.py  executor.py  planner.py  runtime.py
jarvis/api/: schemas.py  server.py
jarvis/apps/: __init__.py  registry.py
jarvis/audio/: __init__.py  stt.py  tts.py  voice_loop.py  wake_word.py
jarvis/automation/: __init__.py  browser.py  clipboard.py  desktop.py  screen.py
jarvis/core/: __init__.py  audit.py  config.py  logging.py  models.py  safety.py
jarvis/filesystem/: __init__.py  agent.py
jarvis/memory/: __init__.py  store.py
jarvis/plugins/: __init__.py  base.py  loader.py
jarvis/plugins/builtin/: __init__.py  vscode.py
jarvis/tools/: __init__.py  base.py  registry.py
scripts/: run-jarvis.ps1
tests/: test_planner.py
