[project]
name = "jarvis-local-assistant"
version = "0.1.0"
description = "Local-first autonomous desktop AI assistant for Windows"
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
